# Coding_Playground

./: README.md
digital_timer/: README
digital_timer/.pioenvs/: .sconsign.dblite  structure.hash
digital_timer/software/: Makefile  clean.sh  upload.sh
dimmer_lamp/.pioenvs/: .sconsign.dblite  structure.hash
dimmer_lamp/software/: Makefile
dimmer_lamp/src/: TouchSensor.h
home_automation/: README.md
home_automation-deprecated/lights_node/: platformio.ini
home_automation-deprecated/master_rf_node/: platformio.ini
home_automation/actuators/LivoloLightsNode/zephyr_rtos/: .gitignore  CMakeLists.txt  build-app.sh  build-mcuboot.sh  common.sh  platformio.ini  prj.conf  util.sh
home_automation/actuators/LivoloLightsNode/zephyr_rtos/boards/arm/tt_nrf52/: Kconfig  tt_nrf52_defconfig
home_automation/actuators/LivoloLightsNode/zephyr_rtos/include/: leds_logic.h  mesh_logic.h  relays_logic.h
home_automation/actuators/LivoloLightsNode/zephyr_rtos/src/: leds_logic.c  main.c  mesh_logic.c  relays_logic.c  ts_buttons_logic.c
home_automation/actuators/LivoloLightsNode/zephyr_rtos/zephyr/: CMakeLists.txt  prj.conf
home_automation/actuators/LivoloLightsNode/zephyr_rtos/zephyr/boards/arm/tt_nrf52/: Kconfig.defconfig  tt_nrf52.dts  tt_nrf52_defconfig
home_automation/master_rf_node/: master_rf_node.ino
home_automation/tornado_ws/: ws_server.py
ir_hid/: platformio.ini
ir_hid/.pioenvs/: .sconsign.dblite  structure.hash
ir_hid/hardware/: ir_hid.brd
irpower_lights/: README
magic_carpet/: platformio.ini
rc_car/: README.md
sensors_network/: README.md
(+755 files in other folders)
